desktop-base (9.0.2) UNRELEASED; urgency=medium

  [ Aurélien COUDERC ]
  * Include size 3840x2160 (4k) wallpaper and lockscreen (Closes: #851930).

 -- Aurélien COUDERC <zecoucou@free.fr>  Fri, 20 Jan 2017 23:40:01 +0100

desktop-base (9.0.1) unstable; urgency=medium

  [ Aurélien COUDERC ]
  * postinst: Report success even when update-grub fails, this is needed
    for installation to work inside live systems. (Closes: #850601).
  * Plymouth/{softWaves,Lines,Joy}: provide fsckd progress support. Thanks to
    Ubuntu and Didier Roche for doing the work and providing timely info.
    (Closes: #850181)
  * Plymouth/softWaves: various visual tweaks, boost logo glow, improvements
    in password input rendering. Thanks Juliette!
  * Plymouth/Lines: ensure password field doesn’t bump into the Debian image
    even for smaller height screens. (Closes: #774226)
  * Plymouth/Lines: Remove 8 from Debian8 assets.

 -- Aurélien COUDERC <zecoucou@free.fr>  Sun, 15 Jan 2017 11:25:27 +0100

desktop-base (9.0.0) unstable; urgency=medium

  [ Aurélien COUDERC ]
  * Implement Plymouth splash for Stretch’s soft Waves theme.
    (Closes: #843998, #842078)
  * Prepare for plymouth splash integration into theme packs that will allow
    splash selection via alternatives in the future.
  * Fix postinst broken in 9.0.0~exp2 on install (and not upgrade) of the
    package.
  * Added myself to the uploaders.

 -- Aurélien COUDERC <zecoucou@free.fr>  Mon, 02 Jan 2017 15:56:32 +0100

desktop-base (9.0.0~exp2) experimental; urgency=medium

  [ Aurélien COUDERC ]
  * Fix detection of update-initramfs. (Closes: #843727)
  * Include GRUB text/background colors in the theme pack / alternatives
    system. (Closes: #606383)

  * Additional wallpaper and lockscreen ratios for Soft Waves theme.
  * Remove Moreblue theme from Lenny.
  * Add theme pack support Joy/Spacefun themes.

  * Use dash instead of bash for postinst
  * Generate all GRUB bitmaps from SVG at build time instead of versioning