@@ -2,12 +2,12 @@
   <static>
     <duration>8640000.0</duration>
     <file>
-      <size width="1280" height="720">/usr/share/desktop-base/joy-theme/wallpaper/contents/images/1280x720.svg</size>
-      <size width="1280" height="1024">/usr/share/desktop-base/joy-theme/wallpaper/contents/images/1280x1024.svg</size>
-      <size width="1600" height="1200">/usr/share/desktop-base/joy-theme/wallpaper/contents/images/1600x1200.svg</size>
-      <size width="1920" height="1080">/usr/share/desktop-base/joy-theme/wallpaper/contents/images/1920x1080.svg</size>
-      <size width="1920" height="1200">/usr/share/desktop-base/joy-theme/wallpaper/contents/images/1920x1200.svg</size>
-      <size width="3840" height="2160">/usr/share/desktop-base/joy-theme/wallpaper/contents/images/3840x2160.svg</size>
+      <size width="1280" height="720">/usr/share/desktop-base/joy-theme/lockscreen/contents/images/1280x720.svg</size>
+      <size width="1280" height="1024">/usr/share/desktop-base/joy-theme/lockscreen/contents/images/1280x1024.svg</size>
+      <size width="1600" height="1200">/usr/share/desktop-base/joy-theme/lockscreen/contents/images/1600x1200.svg</size>
+      <size width="1920" height="1080">/usr/share/desktop-base/joy-theme/lockscreen/contents/images/1920x1080.svg</size>
+      <size width="1920" height="1200">/usr/share/desktop-base/joy-theme/lockscreen/contents/images/1920x1200.svg</size>
+      <size width="3840" height="2160">/usr/share/desktop-base/joy-theme/lockscreen/contents/images/3840x2160.svg</size>
     </file>
   </static>
 </background>
