@@ -2,6 +2,7 @@ desktop-base (9.0.2) UNRELEASED; urgency=medium
 
   [ Aurélien COUDERC ]
   * Include size 3840x2160 (4k) wallpaper and lockscreen (Closes: #851930).
+  * Lockscreen/Joy: fix wallpaper image being used instead of lockscreen. 
 
  -- Aurélien COUDERC <zecoucou@free.fr>  Fri, 20 Jan 2017 23:40:01 +0100
 
